--- a/src/main/resources/gui/livro.fxml
+++ b/src/main/resources/gui/livro.fxml
@@ -1,29 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="br.com.senac.bookhub.controller.LivroController">
-    <Label text="Book Hub"/>
-    <Label text="Nome do Livro:" />
-    <TextField fx:id="nomeLivroField" />
-    <Label text="Autor:" />
-    <TextField fx:id="autorField" />
-    <Label text="Preço:" />
-    <TextField fx:id="precoField" />
-    <Button text="Adicionar" onAction="#adicionarLivro" />
-    <Button text="Atualizar" onAction="#atualizarLivro" />
-    <Button text="Excluir" onAction="#excluirLivro" />
-    <TextField fx:id="pesquisaField" promptText="Pesquisar por livro..." onKeyReleased="#pesquisarLivros" />
-    <TableView fx:id="livrosTableView">
+<VBox alignment="CENTER" style="-fx-background-color: #ADD8E6;" xmlns="http://javafx.com/javafx/20.0.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.senac.bookhub.controller.LivroController">
+   <Label alignment="CENTER" contentDisplay="CENTER" text="Book Hub" textAlignment="CENTER" textFill="#4a15b5">
+      <font>
+         <Font name="Bauhaus 93" size="72.0" />
+      </font>
+   </Label>
+    <Label text="Nome do Livro:">
+      <font>
+         <Font name="Bauhaus 93" size="20.0" />
+      </font></Label>
+    <TextField fx:id="nomeLivroField" promptText="Digite o nome do Livro" style="-fx-background-color: #E0FFFF;" />
+    <Label text="Autor:">
+      <font>
+         <Font name="Bauhaus 93" size="20.0" />
+      </font></Label>
+    <TextField fx:id="autorField" promptText="Digite o nome do autor" style="-fx-background-color: #E0FFFF;" />
+    <Label text="Preço:">
+      <font>
+         <Font name="Bauhaus 93" size="20.0" />
+      </font></Label>
+    <TextField fx:id="precoField" promptText="Digite o preço do livro" style="-fx-background-color: #E0FFFF;" />
+   <HBox alignment="CENTER" prefHeight="68.0" prefWidth="502.0">
+      <children>
+          <Button alignment="CENTER" onAction="#adicionarLivro" style="-fx-background-color: #00FF7F;" text="Adicionar">
+            <font>
+               <Font name="Bauhaus 93" size="22.0" />
+            </font></Button>
+          <Button onAction="#atualizarLivro" style="-fx-background-color: #FFD700;" text="Atualizar">
+            <font>
+               <Font name="Bauhaus 93" size="22.0" />
+            </font></Button>
+          <Button onAction="#excluirLivro" style="-fx-background-color: #FF6347;" text="Excluir">
+            <font>
+               <Font name="Bauhaus 93" size="22.0" />
+            </font></Button>
+      </children>
+      <opaqueInsets>
+         <Insets />
+      </opaqueInsets>
+      <effect>
+         <Blend />
+      </effect>
+   </HBox>
+    <TextField fx:id="pesquisaField" onKeyReleased="#pesquisarLivros" prefHeight="31.0" prefWidth="502.0" promptText="Pesquisar por livro..." style="-fx-background-color: #E0FFFF;" />
+    <TableView fx:id="livrosTableView" prefHeight="342.0" prefWidth="502.0">
         <columns>
-            <TableColumn text="Nome do Livro" fx:id="nomeLivroColumn" prefWidth="200" />
-            <TableColumn text="Autor" fx:id="autorColumn" prefWidth="200" />
-            <TableColumn text="Preço" fx:id="precoColumn" prefWidth="100" />
+            <TableColumn fx:id="nomeLivroColumn" prefWidth="200" text="Nome do Livro" />
+            <TableColumn fx:id="precoColumn" prefWidth="100" text="Preço" />
+            <TableColumn fx:id="autorColumn" prefWidth="200" text="Autor" />
         </columns>
+      <columnResizePolicy>
+         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+      </columnResizePolicy>
     </TableView>
 </VBox>
